README: update layer dependencies section
Issue: LIN1024-4496

Updated the "Dependencies" section in the README to reflect
the dependency on the bcm-2xxx-rpi layer.

Signed-off-by: Bo Sun <Bo.Sun.CN@windriver.com>

--- a/README
+++ b/README
@@ -8,8 +8,10 @@ Please refer to README.hardware for hardware specific information.
 
 Dependencies
 ------------
-This layer depends on the oe-core version supplied with Wind River
-Linux and the wrlinux layer.
+This layer depends on the following layers supplied with Wind River Linux:
+    oe-core
+    wrlinux
+    meta-raspberrypi
 
 Maintenance
 -----------
